Added jekyll support and simple blogstyle

--- a/index.html
+++ b/index.html
@@ -1,92 +1,9 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jonathan Bosson - bossonj</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: default
+title: Jonathan Bosson, bossonj
+---
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/colorbrewer.css">
-        <link rel="stylesheet" href="css/nouislider.css">
-        <link rel="stylesheet" href="css/sweetalert.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-
-        <!--modules css-->
-        <link rel="stylesheet" href="css/map.css">
-        <link rel="stylesheet" href="css/slider.css">
-
-    </head>
-
-
-        <!--[if lt IE 7]>
-           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-       <![endif]-->
-
-        <!-- Wrap all page content here -->
-        <div id="wrap">
-
-            <!-- Fixed navbar -->
-            <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header" style="width: 100%">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Home</a>
-                        <a class="navbar-brand" onclick="getInfo()" style="float: right;">Info</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Begin page content -->
-
-
-            <div class="container">
-                <!-- row of columns -->
-                <br><br><br>
-                <div class="row" style ="height: 90%;">
-                  <div  id ="left" style =" width: 25vw; float: left;">
-                    <legend>Left side text</legend>
-                  </div>
-                    <div id="center" class="col-md-6" style ="height: 80vh; width: 50vw">
-                      <legend>center side text</legend>
-                    </div>
-
-                    <div id="right" class="col-md-6" style="width: 25vw; padding-right: 3vw;">
-                      <legend>Right side text</legend>
-                    </div>
-                </div>
-                <div class="col" style ="height: 10%; width: 100%; margin-left: 37%; margin-top: 1%;">
-                </div>
-            </div>
-        </div>
-
-
-        <script src="js/vendor/jquery.min.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/vendor/underscore-min.js"></script>
-        <script src="js/vendor/colorbrewer.js"></script>
-        <!--buckets, JavaScript library including minHeap https://github.com/mauriciosantos/Buckets-JS -->
-        <script src="js/vendor/buckets.min.js"></script>
-        <!-- noUiSlider lightweight JavaScript range slider library https://github.com/leongersen/noUiSlider -->
-        <script src="js/vendor/nouislider.min.js"></script>
-        <!-- A beautiful replacement for JavaScript's alert window https://github.com/t4t5/sweetalert -->
-        <script src="js/vendor/sweetalert.min.js"></script>
-		<!--modules js-->
-        <script src="js/main.js"></script>
-
-</html>
+		<div class="blurb">
+			<h1>Hi there, I'm Jonathan!</h1>
+			<p>I'm a coder enthusiast and a <em>soon to be</em> MSc engineer with a passion for VR/AR, motion tracking systems and computer vision. <a href="/about">Read more about my life...</a></p>
+		</div> 
