Reference to reports

--- a/cv/index.html
+++ b/cv/index.html
@@ -20,7 +20,7 @@ title: CV of Jonathan Bosson
 
 					<p><strong>Procedural methods for images: <a href="#">Procedural rendered planet.</a></strong> <em>TNM084 course</em>.
 
-					<p><strong>Procedural methods for images: <a href="#">TaxiViz - .</a></strong> <em>TNM084 course</em>.
+					<p><strong>Information Visualization: <a href="/reports/taxiviz_jonbo665.pdf">TaxiViz - Geovisualisation of Taxi Cars.</a></strong> <em>TNM048 course</em>.
 
 
 	</div>
