Added rest of my publications

--- a/cv/index.html
+++ b/cv/index.html
@@ -16,11 +16,17 @@ title: CV of Jonathan Bosson
 
 					<h2>Select Publications</h2>
 
-					<p><strong>Bachelor Thesis: <a href="#">DooVR - Interaktiv modellering i virtuell verklighet.</a></strong> <em>TNM094 course</em>.
+					<p><strong>Bachelor Thesis: <a href="/reports/DooVR_Rapport.pdf">DooVR - Interaktiv modellering i virtuell verklighet.</a></strong> <em>TNM094 course</em>.
 
-					<p><strong>Procedural methods for images: <a href="#">Procedural rendered planet.</a></strong> <em>TNM084 course</em>.
+					<p><strong>Global Illumination and Rendering: <a href="/reports/agirRapport.pdf">Physically based rendering with Monte Carlo Raytracing.</a></strong> <em>TNCG15 course</em>.
+
+					<p><strong>Modelling Project: <a href="/reports/TNM085_group5.pdf">3D Rigid Body Physics Simulation.</a></strong> <em>TNM085 course</em>.
 
 					<p><strong>Information Visualization: <a href="/reports/taxiviz_jonbo665.pdf">TaxiViz - Geovisualisation of Taxi Cars.</a></strong> <em>TNM048 course</em>.
+
+					<p><strong>Procedural Methods for Images: <a href="/reports/jonbo665_planetcreation.pdf">Procedural Planet Creation.</a></strong> <em>TNM084 course</em>.
+
+					
 
 
 	</div>
