profile pic and about text

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,10 @@ title: About Jonathan Bosson
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+
+			<img width="190" height="190" align="right" src="/images/jonte.jpeg">
+			<p>I started studying the <em>Master of Science in Media Technology and Engineering (MT)</em> 2012 and am to finish it summer 2017. I bet at this point some of you are scratching your beard at what kind of program this is. In short, it's a broad computer science program with courses stretching from computer vision to VR to machine learning. It has a great mathmatical foundation and strong collaboration with the Visualization Center here in Norrköping.<br>
+			Personally I've come to love VR/AR, rendering and 3D graphics. Computer vision and developing new ways for humans to interact with technology is a big passion of mine. At the core, I'm an internationalist. I love travelling and to connect with people all over the world.</p>
 
 			<ul class="contacts">
 				<li><a href="https://twitter.com/jontebosson">Twitter</a></li>
