--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: About Jonathan Bosson
 			<h1>About</h1>
 
 			<img width="190" height="190" align="right" src="/images/jonte.jpeg">
-			<p>I started studying the <em>Master of Science in Media Technology and Engineering (MT)</em> 2012 and am to finish it summer 2017. I bet at this point some of you are scratching your beard at what kind of program this is. In short, it's a broad computer science program with courses stretching from computer vision to VR to machine learning. It has a great mathmatical foundation and strong collaboration with the Visualization Center here in Norrköping.<br>
+			<p>I started studying the <em>Master of Science in Media Technology and Engineering (MT)</em> 2012 and am to finish it summer 2017. I bet at this point some of you are scratching your beard wondering what kind of program MT is. In short, it's a broad computer science program with courses stretching from computer vision to VR to machine learning. It has a great mathmatical foundation and strong collaboration with the Visualization Center here in Norrköping.<br>
 			Personally I've come to love VR/AR, rendering and 3D graphics. Computer vision and developing new ways for humans to interact with technology is a big passion of mine. At the core, I'm an internationalist. I love travelling and to connect with people all over the world.</p>
 
 			<ul class="contacts">
