Website update and visual data analysis post

--- a/cv/index.html
+++ b/cv/index.html
@@ -7,18 +7,20 @@ title: CV of Jonathan Bosson
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
 					<h1>Jonathan Bosson</h1>
 					<address>
-					<strong>Affiliation</strong><br>
+					<strong>Address</strong><br>
 					Luntgatan 16<br>
 					Sweden, Norrköping, 60219<br>
 					<span class="obfuscate">
-					jonathan.bosson@gmail.com</span>
+					jonathanbosson@gmail.com</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h4>Past Projects</h4>
 
 					<p><strong>Bachelor Thesis: <a href="/reports/DooVR_Rapport.pdf">DooVR - Interaktiv modellering i virtuell verklighet.</a></strong> <em>TNM094 course</em>.
 
 					<p><strong>Global Illumination and Rendering: <a href="/reports/agirRapport.pdf">Physically based rendering with Monte Carlo Raytracing.</a></strong> <em>TNCG15 course</em>.
+
+					<p><strong>Visual Data Analysis : <a href="/reports/tnm098.pdf">VAST Mini Challange 2 - Analysis of Hazium Threat</a></strong> <em>TNM098 course</em>.
 
 					<p><strong>Modelling Project: <a href="/reports/TNM085_group5.pdf">3D Rigid Body Physics Simulation.</a></strong> <em>TNM085 course</em>.
 
