--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,9 @@ title: CV of Jonathan Bosson
 					jonathanbosson@gmail.com</span>
 					</address>
 
-					<h4>Past Projects</h4>
+					<h4>Reports from Past Projects</h4>
+
+					<p><strong>Modelling & Simulation:</strong> <a href="/reports/lab1_jonbo665.pdf">HalfEdge</a>, <a href="/reports/lab2_jonbo665.pdf">Decimation</a>, <a href="/reports/lab3_jonbo665.pdf">Splines & Subdivision</a>, <a href="/reports/lab4_jonbo665.pdf">Implicit Surfaces</a>, <a href="/reports/lab5_jonbo665.pdf">Level-sets</a>, <a href="/reports/lab6_jonbo665.pdf">Fluid Simluation</a>, <em>TNM079 course</em>.
 
 					<p><strong>Bachelor Thesis: <a href="/reports/DooVR_Rapport.pdf">DooVR - Interaktiv modellering i virtuell verklighet.</a></strong> <em>TNM094 course</em>.
 
