update of website for this autumns projects

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,17 +4,23 @@ title: CV of Jonathan Bosson
 ---
 
 	<div class="cv">
-		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
+		<a href="/reports/cv.pdf" class="download" title="Download CV as PDF">Download CV</a>			
 					<h1>Jonathan Bosson</h1>
 					<address>
 					<strong>Address</strong><br>
-					Luntgatan 16<br>
-					Sweden, Norrköping, 60219<br>
+					1057 E Fuller Ave<br>
+					Salt Lake City, Utah, 84102<br>
 					<span class="obfuscate">
 					jonathanbosson@gmail.com</span>
 					</address>
 
 					<h4>Reports from Past Projects</h4>
+
+					<p><strong>Adv. Simulation and Visualization of Fluids in Computer Graphics: <a href="/reports/tn1008-dfsph-fluidsimulation.pdf">Divergence-Free Smoothed Particle Hydrodynamics for Fluid Simulations.</a></strong> <em>TN1008 course</em>.
+
+					<p><strong>SFX - Tricks of the Trade: <a href="/reports/flubber.pdf">Maya Soft Body Deformer using Shape Matching</a>, <a href="/reports/polynomial_jonbo665.pdf">Image Space Adaptive Polynomial Rendering.</a></strong> <em>TNCG13 course</em>.
+
+					<p><strong>AI for Interactive Media: <a href="/reports/mlpocr_jonbo665_isaja187.pdf">Interactive Equation Solver through MLP neural network and OCR</a></strong> <em>TNM095 course</em>.
 
 					<p><strong>Modelling & Simulation:</strong> <a href="/reports/lab1_jonbo665.pdf">HalfEdge</a>, <a href="/reports/lab2_jonbo665.pdf">Decimation</a>, <a href="/reports/lab3_jonbo665.pdf">Splines & Subdivision</a>, <a href="/reports/lab4_jonbo665.pdf">Implicit Surfaces</a>, <a href="/reports/lab5_jonbo665.pdf">Level-sets</a>, <a href="/reports/lab6_jonbo665.pdf">Fluid Simluation</a>, <em>TNM079 course</em>.
 
@@ -23,14 +29,5 @@ title: CV of Jonathan Bosson
 					<p><strong>Global Illumination and Rendering: <a href="/reports/agirRapport.pdf">Physically based rendering with Monte Carlo Raytracing.</a></strong> <em>TNCG15 course</em>.
 
 					<p><strong>Visual Data Analysis : <a href="/reports/tnm098.pdf">VAST Mini Challange 2 - Analysis of Hazium Threat</a></strong> <em>TNM098 course</em>.
-
-					<p><strong>Modelling Project: <a href="/reports/TNM085_group5.pdf">3D Rigid Body Physics Simulation.</a></strong> <em>TNM085 course</em>.
-
-					<p><strong>Information Visualization: <a href="/reports/taxiviz_jonbo665.pdf">TaxiViz - Geovisualisation of Taxi Cars.</a></strong> <em>TNM048 course</em>.
-
-					<p><strong>Procedural Methods for Images: <a href="/reports/jonbo665_planetcreation.pdf">Procedural Planet Creation.</a></strong> <em>TNM084 course</em>.
-
-					
-
 
 	</div>
