--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Jonathan Bosson
 
 		<div class="blurb">
 			<h1>Hi there, I'm Jonathan!</h1>
-			<p>I'm a code enthusiast and a <em>soon to be</em> MSc engineer with a passion for mathmathics, VR/AR, motion tracking systems and computer vision. <a href="/about">Read more about my life...</a></p>
+			<p>I'm a code enthusiast and a <em>soon to be</em> MS engineer with a passion for mathmathics, VR/AR and new ways of interacting with technology. <a href="/blog">Read of my past projects here...</a></p>
 		</div> 
